Bugs caught and slain. Added extra margin to bottom of cards just for better spacing at the bottom of the page.

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -208,6 +208,7 @@ body {
   flex-direction: row;
   width: 100%;
   margin-top: 16px;
+  margin-bottom: 50px;
   flex-wrap: wrap;
 }
 @media (min-width: 1200px) {
@@ -289,6 +290,7 @@ body {
   border: 2px solid #333;
 }
 .carousel .left-button {
+  z-index: 10;
   top: 50%;
   left: 25px;
   transform: translate(0, -50%);
