--- a/components/Carousel/Carousel.less
+++ b/components/Carousel/Carousel.less
@@ -25,6 +25,7 @@
     }
   }
   .left-button {
+    z-index: 10;
     top: 50%; 
     left: 25px;
     transform: translate(0, -50%);
